# Goalkeeper-DNN

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.sh
Blackboard/: CMakeLists.txt
Blackboard/src/: SharedMemory.py
Control/: CMakeLists.txt
Control/Data/: config.ini
Control/Linux/project/control/: GaitMove.cpp  GaitMove.hpp  main.cpp
IMU/: CMakeLists.txt
IMU/src/: comms.cpp
Vision/: CMakeLists.txt
Vision/Data/old_backup/: config.ini
Vision/src/: decision3DNN.py  decisionDNN.py
Vision/src/nets/20180810-200238-65f4/: mean.binaryproto  status.pickle
Vision/src/nets/3DNN/20180415-214315-4313/: mean.binaryproto  status.pickle
Vision/src/nets/3DNN/20180415-214447-7028/: mean.binaryproto  status.pickle
Vision/src/nets/3DNN/20180416-002052-9173/: mean.binaryproto  status.pickle
Vision/src/nets/3DNN/2class/: deploy.prototxt  labels.txt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
Vision/src/nets/3DNN/classBall/: deploy.prototxt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
Vision/src/nets/3DNN/noBall/: deploy.prototxt  labels.txt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
Vision/src/nets/DNN_ballClass/: deploy.prototxt  labels.txt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
Vision/src/nets/squeezenet/: deploy.prototxt  labels.txt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
